--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "formik": "^2.4.6",
+    "jalaali-js": "^1.2.7",
     "lucide-react": "^0.428.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -35,6 +36,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
+    "@types/jalaali-js": "^1.1.3",
     "@types/node": "^22.4.2",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
